ajute proyecto web

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -3,11 +3,6 @@
 }
 
 <div class="text-center">
-    <br/>
-    <h1 class="display-4">Bienvenido a mi primer aplicación en NETCORE </h1>
-    <br/>
-    <img src="~/images/net_core.png" alt="Net Core" style="width:500px;height:500px;">
-    <br/>
-    <br/>
+    <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
